# slack-markdown-parser

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.ja.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.ja.md  CODE_OF_CONDUCT.md  CONTRIBUTING.ja.md  CONTRIBUTING.md  INSTALL_FROM_GITHUB.ja.md  INSTALL_FROM_GITHUB.md  LAMBDA_INTEGRATION_GUIDE.ja.md  LAMBDA_INTEGRATION_GUIDE.md  LICENSE  MANIFEST.in  QUICKSTART.ja.md  QUICKSTART.md  README-ja.md  README.ja.md  README.md  RELEASE.ja.md  RELEASE.md  SECURITY.ja.md  SECURITY.md  SUPPORT.ja.md  SUPPORT.md  build_lambda_layer.sh  pyproject.toml  setup.py  slack-markdown-parser-review.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  publish-pypi.yml  publish.yml
docs/: Markdown_Sample.ja.md  OSS_RELEASE_CHECKLIST.ja.md  OSS_RELEASE_CHECKLIST.md  README.ja.md  README.md  Slack_Markdown-Table_Block_Manual_20251125.md  bot-alignment-plan-ja.md  slack-client-manual-checklist.md  slack-markdown-parser-review.md  slack-markdown-rollout-observations.md  slack-nested-modifier-findings.md  slack-render-test-app-manifest.yaml  slack-render-test-workflow.md  spec-ja.md  spec.md
docs/_internal/: README.md  fix-and-release-playbook.md  slack-render-test-app-manifest.yaml  slack-render-test-workflow.md
scripts/: generate_nested_modifier_matrix.py  post_slack_render_test.py
slack_markdown_parser/: __init__.py  converter.py
tests/: test_converter.py  test_llm_markdown_p0_corpus.py  test_markdown_edge_cases.md  test_nested_modifier_matrix.py
tests/fixtures/: llm_markdown_p0_corpus.md  (+4 more)
