[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slack-markdown-parser"
version = "2.2.3"
description = "Convert LLM Markdown into Slack Block Kit markdown/table messages"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  {name = "darkgaldragon"}
]
keywords = ["slack", "markdown", "block-kit", "table", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "black>=24.0.0",
  "build>=1.2.0",
  "pip-audit>=2.7.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "twine>=5.1.0",
]

[project.urls]
Homepage = "https://github.com/darkgaldragon/slack-markdown-parser"
Source = "https://github.com/darkgaldragon/slack-markdown-parser"
Issues = "https://github.com/darkgaldragon/slack-markdown-parser/issues"

[tool.setuptools.packages.find]
include = ["slack_markdown_parser*"]

[tool.setuptools.package-data]
slack_markdown_parser = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "UP006", "UP035", "UP045"]
